Added a reporter callback to quieten down logging

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dr.js",
+    "name": "dr-js",
     "description": "Tiny documentation builder",
     "tags": ["documentation"],
     "author"  : {
