Create output directory if it doesn't exist
using mkdirp package

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "eve": "*",
         "markdown": "*",
+        "mkdirp": "^0.5.1",
         "topcoat": "*",
         "dot": "*"
     },
